--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="wrap">
         <div class="inputContainer">
-            <img src="/img/845-8451388_sunlight-clipart-emoji-rain-and-sun-cloud.png" alt="">
+            <img src="./img/845-8451388_sunlight-clipart-emoji-rain-and-sun-cloud.png" alt="">
             <input type="text" id="city" placeholder="Lead the city" autocomplete="off">
             <button id="search">Сheck the weather</button>
         </div>
