Add display flag

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="infoItem">
                 <div class="valItem" id="nameCity"></div>
                 <div class="valItem" id="country"></div>
+                <div class="valItem" id="flagCountry"></div>
             </div>
             <div class="infoItem">
                 <div class="verticalContainer">
