Add section advices

--- a/index.html
+++ b/index.html
@@ -31,9 +31,12 @@
         <div class="infoContainer">
             <div class="infoItem">
                 <div class="valItem" id="nameCity"></div>
-                <div class="valItem" id="country"></div>
-                <div class="valItem" id="flagCountry"></div>
+                <div class="countryCobtainer valItem">
+                    <div id="country"></div>
+                    <div id="flagCountry"></div>
+                </div>
             </div>
+            <hr>
             <div class="infoItem">
                 <div class="verticalContainer">
                     <div class="nameItem">Actual</div>
@@ -44,27 +47,37 @@
                     <div class="valItem" id="feelsLikeTemperatura"></div>
                 </div>
             </div>
+            <hr>
             <div class="infoItem">
                 <div class="nameItem">Weather</div>
                 <div class="valItem" id="weather"></div>
             </div>
+            <hr>
             <div class="infoItem">
                 <div class="nameItem">Pressure</div>
                 <div class="valItem" id="tusk"></div>
             </div>
+            <hr>
             <div class="infoItem">
                 <div class="nameItem">Humidity</div>
                 <div class="valItem" id="humidity"></div>
             </div>
+            <hr>
             <div class="infoItem">
                 <div class="nameItem">Wind speed</div>
                 <div class="valItem" id="windSpeed"></div>
             </div>
+            <hr>
             <div class="infoItem">
                 <div class="nameItem">Wind direction</div>
                 <div class="valItem" id="windDirection">
                     <i class="fa-solid fa-arrow-up" id="windDeg"></i>
                 </div>
+            </div>
+            <hr>
+            <div class="AdviceContainer">
+                <div class="nameItem">Advice on what to wear:</div>
+                <div class="adviceBlock" id="Advice"></div>
             </div>
         </div>
     </div>
