add hover effect on input city

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <div class="wrap">
         <div class="inputContainer">
             <img src="./img/845-8451388_sunlight-clipart-emoji-rain-and-sun-cloud.png" alt="">
-            <input type="text" id="city" placeholder="Lead the city" autocomplete="off">
+            <p class="cityPlaceholder">Lead the city</p>
+            <input type="text" id="city" autocomplete="off">
             <button id="search">Сheck the weather</button>
         </div>
         <div class="infoContainer">
