changed the project structure (moved all files with styles to the styles folder)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
     <link rel="icon" type="image/png" href="./img/845-8451388_sunlight-clipart-emoji-rain-and-sun-cloud.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.1/axios.min.js"
         integrity="sha512-w9PRLSWbo+Yqin/AzSMGoP+qe8UF1njFtd1rEnR58Xv2GEJNEa6O6Bv53mkPbNyAwGCn1HVt1OOvd5i+E55t+w=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
